--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.18.2",
+    "node": "^22.14.0",
     "nodemon": "^3.1.7"
   }
 }
